--- a/MAKEFILE
+++ b/MAKEFILE
@@ -3,7 +3,7 @@ all: tst_rast tst_mo tst_ren
 tst_rast: tst_rast.o raster.o rast_asm.o
     cc68x -g tst_rast.o raster.o rast_asm.o -o tst_rast
 
-tst_rast.o: tst_rast.c raster.h
+tst_rast.o: tst_rast.c raster.h types.h
     cc68x -g -c tst_rast.c
 
 raster.o: raster.c raster.h
