--- a/MAKEFILE
+++ b/MAKEFILE
@@ -6,7 +6,7 @@ tst_rast: tst_rast.o raster.o rast_asm.o
 tst_rast.o: tst_rast.c raster.h types.h
     cc68x -g -c tst_rast.c
 
-raster.o: raster.c raster.h
+raster.o: raster.c raster.h types.h
     cc68x -g -c raster.c
 
 rast_asm.o: rast_asm.s
