--- a/MAKEFILE
+++ b/MAKEFILE
@@ -6,7 +6,7 @@ tst_rast: tst_rast.o raster.o rast_asm.o
 tst_rast.o: tst_rast.c raster.h types.h
     cc68x -g -c tst_rast.c
 
-raster.o: raster.c raster.h types.h
+raster.o: raster.c raster.h types.h font.h
     cc68x -g -c raster.c
 
 rast_asm.o: rast_asm.s
@@ -29,3 +29,9 @@ renderer.o: renderer.c renderer.h raster.h
 
 tst_ren.o: tst_ren.c renderer.h raster.h
     cc68x -g -c tst_ren.c
+
+bitmaps.o: bitmaps.c bitmaps.h types.h
+    cc68x -g -c bitmaps.c
+
+font.o: font.c font.h types.h
+    cc68x -g -c font.c
