--- a/MAKEFILE
+++ b/MAKEFILE
@@ -15,8 +15,8 @@ bitmaps.o: bitmaps.c bitmaps.h types.h
 raster.o: raster.c raster.h types.h font.h
 	cc68x -g -c raster.c
 
-tst_mo: tst_mo.o model.o
-	cc68x -g tst_mo.o model.o -o tst_mo
+tst_mo: tst_mo.o model.o raster.o font.o events.o
+	cc68x -g tst_mo.o model.o raster.o font.o events.o -o tst_mo
 
 tst_mo.o: tst_mo.c model.h events.h
 	cc68x -g -c tst_mo.c
