--- a/MAKEFILE
+++ b/MAKEFILE
@@ -30,8 +30,8 @@ events.o: events.c events.h
 tst_ren: tst_ren.o renderer.o
 	cc68x -g tst_ren.o renderer.o raster.o -o tst_ren
 
-renderer.o: renderer.c renderer.h raster.h
+renderer.o: renderer.c renderer.h raster.h types.h
 	cc68x -g -c renderer.c
 
-tst_ren.o: tst_ren.c renderer.h raster.h
+tst_ren.o: tst_ren.c renderer.h raster.h types.h
 	cc68x -g -c tst_ren.c
