--- a/MAKEFILE
+++ b/MAKEFILE
@@ -27,8 +27,8 @@ model.o: model.c model.h
 events.o: events.c events.h
 	cc68x -g -c events.c
 
-tst_ren: tst_ren.o renderer.o font.o model.o events.o
-	cc68x -g tst_ren.o renderer.o raster.o font.o model.o events.o -o tst_ren
+tst_ren: tst_ren.o renderer.o font.o model.o events.o bitmaps.o
+	cc68x -g tst_ren.o renderer.o raster.o font.o model.o events.o bitmaps.o -o tst_ren
 
 renderer.o: renderer.c renderer.h raster.h types.h model.h bitmaps.h events.h
 	cc68x -g -c renderer.c
