--- a/MAKEFILE
+++ b/MAKEFILE
@@ -1,4 +1,4 @@
-all: tst_rast tst_mo tst_ren
+all: tst_rast tst_mo tst_ren showdown
 
 tst_rast: tst_rast.o raster.o font.o
 	cc68x -g tst_rast.o raster.o font.o -o tst_rast
@@ -35,3 +35,9 @@ renderer.o: renderer.c renderer.h raster.h types.h model.h bitmaps.h events.h
 
 tst_ren.o: tst_ren.c renderer.h raster.h types.h model.h bitmaps.h events.h
 	cc68x -g -c tst_ren.c
+
+showdown: showdown.o renderer.o font.o model.o events.o bitmaps.o
+	cc68x -g showdown.o renderer.o raster.o font.o model.o events.o bitmaps.o -o showdown
+
+showdown.o: showdown.c renderer.h raster.h types.h model.h bitmaps.h events.h
+	cc68x -g -c showdown.c
