--- a/MAKEFILE
+++ b/MAKEFILE
@@ -39,5 +39,5 @@ tst_ren.o: tst_ren.c renderer.h raster.h types.h model.h bitmaps.h events.h
 showdown: showdown.o renderer.o font.o model.o events.o bitmaps.o
 	cc68x -g showdown.o renderer.o raster.o font.o model.o events.o bitmaps.o -o showdown
 
-showdown.o: showdown.c renderer.h raster.h types.h model.h bitmaps.h events.h
+showdown.o: showdown.c showdown.h renderer.h raster.h types.h model.h bitmaps.h events.h
 	cc68x -g -c showdown.c
