--- a/MAKEFILE
+++ b/MAKEFILE
@@ -27,6 +27,9 @@ model.o: model.c model.h
 events.o: events.c events.h
 	cc68x -g -c events.c
 
+splash.o: splash.c splash.h
+	cc68x -g -c splash.c
+
 tst_ren: tst_ren.o renderer.o font.o model.o events.o bitmaps.o
 	cc68x -g tst_ren.o renderer.o raster.o font.o model.o events.o bitmaps.o -o tst_ren
 
@@ -36,8 +39,8 @@ renderer.o: renderer.c renderer.h raster.h types.h model.h bitmaps.h events.h
 tst_ren.o: tst_ren.c renderer.h raster.h types.h model.h bitmaps.h events.h
 	cc68x -g -c tst_ren.c
 
-showdown: showdown.o renderer.o font.o model.o events.o bitmaps.o
+showdown: showdown.o renderer.o font.o model.o events.o bitmaps.o splash.o
 	cc68x -g showdown.o renderer.o raster.o font.o model.o events.o bitmaps.o -o showdown
 
-showdown.o: showdown.c showdown.h renderer.h raster.h types.h model.h bitmaps.h events.h
+showdown.o: showdown.c renderer.h raster.h types.h model.h bitmaps.h events.h splash.h
 	cc68x -g -c showdown.c
