--- a/MAKEFILE
+++ b/MAKEFILE
@@ -1,9 +1,9 @@
-all: tst_rast tst_mo tst_ren showdown PSG.o effects.o music.o
+all: tst_rast tst_mo tst_ren tst_snd showdown 
 
-tst_rast: tst_rast.o raster.o font.o
-	cc68x -g tst_rast.o raster.o font.o -o tst_rast
+tst_rast: tst_rast.o raster.o font.o video.o
+	cc68x -g tst_rast.o raster.o font.o video.o -o tst_rast
 
-tst_rast.o: tst_rast.c raster.h types.h
+tst_rast.o: tst_rast.c raster.h types.h video.h
 	cc68x -g -c tst_rast.c
 
 font.o: font.c font.h types.h
@@ -15,8 +15,8 @@ bitmaps.o: bitmaps.c bitmaps.h types.h
 raster.o: raster.c raster.h types.h font.h
 	cc68x -g -c raster.c
 
-tst_mo: tst_mo.o model.o raster.o font.o events.o
-	cc68x -g tst_mo.o model.o raster.o font.o events.o -o tst_mo
+tst_mo: tst_mo.o model.o raster.o font.o events.o video.o
+	cc68x -g tst_mo.o model.o raster.o font.o events.o video.o -o tst_mo
 
 tst_mo.o: tst_mo.c model.h events.h
 	cc68x -g -c tst_mo.c
@@ -30,26 +30,35 @@ events.o: events.c events.h
 splash.o: splash.c splash.h
 	cc68x -g -c splash.c
 	
+video.o: video.s video.h
+	gen -L2 video.s
+
 music.o: music.c music.h types.h
 	cc68x -g -c music.c
-	
-effects.o: effects.c effects.h types.h PSG.h
+
+effects.o: effects.c effects.h types.h psg.h
 	cc68x -g -c effects.c
-	
-PSG.o: PSG.c PSG.h types.h
+
+psg.o: psg.c psg.h types.h
 	cc68x -g -c PSG.c
 
-tst_ren: tst_ren.o renderer.o font.o model.o events.o bitmaps.o splash.o
-	cc68x -g tst_ren.o renderer.o raster.o font.o model.o events.o bitmaps.o splash.o -o tst_ren
+tst_snd: tst_snd.o music.o psg.o effects.o
+	cc68x -g tst_snd.o music.o psg.o effects.o -o tst_snd
 
-renderer.o: renderer.c renderer.h raster.h types.h model.h bitmaps.h events.h splash.h
+tst_snd.o: tst_snd.c music.h psg.h effects.h
+	cc68x -g -c tst_snd.c
+
+tst_ren: tst_ren.o renderer.o font.o model.o events.o bitmaps.o splash.o video.o
+	cc68x -g tst_ren.o renderer.o raster.o font.o model.o events.o bitmaps.o splash.o video.o -o tst_ren
+
+renderer.o: renderer.c renderer.h raster.h types.h model.h bitmaps.h events.h splash.h video.h
 	cc68x -g -c renderer.c
 
-tst_ren.o: tst_ren.c renderer.h raster.h types.h model.h bitmaps.h events.h splash.h
+tst_ren.o: tst_ren.c renderer.h raster.h types.h model.h bitmaps.h events.h splash.h video.h
 	cc68x -g -c tst_ren.c
 
-showdown: showdown.o renderer.o font.o model.o events.o bitmaps.o splash.o
-	cc68x -g showdown.o renderer.o raster.o font.o model.o events.o bitmaps.o splash.o -o showdown
+showdown: showdown.o renderer.o font.o model.o events.o bitmaps.o splash.o video.o
+	cc68x -g showdown.o renderer.o raster.o font.o model.o events.o bitmaps.o splash.o video.o -o showdown
 
-showdown.o: showdown.c renderer.h raster.h types.h model.h bitmaps.h events.h splash.h
+showdown.o: showdown.c renderer.h raster.h types.h model.h bitmaps.h events.h splash.h video.h
 	cc68x -g -c showdown.c
