--- a/MAKEFILE
+++ b/MAKEFILE
@@ -15,13 +15,13 @@ bitmaps.o: bitmaps.c bitmaps.h types.h
 raster.o: raster.c raster.h types.h font.h
 	cc68x -g -c raster.c
 
-tst_mo: tst_mo.o model.o raster.o font.o events.o video.o random.o
-	cc68x -g tst_mo.o model.o raster.o font.o events.o video.o random.o -o tst_mo
+tst_mo: tst_mo.o model.o raster.o font.o events.o video.o random.o psg.o music.o effects.o
+	cc68x -g tst_mo.o model.o raster.o font.o events.o video.o random.o psg.o music.o effects.o -o tst_mo
 
 tst_mo.o: tst_mo.c model.h events.h random.h
 	cc68x -g -c tst_mo.c
 
-model.o: model.c model.h 
+model.o: model.c model.h psg.h music.h effects.h events.h
 	cc68x -g -c model.c
 
 random.o: random.c random.h
@@ -47,6 +47,12 @@ psg.o: psg.c psg.h types.h
 
 input.o: input.c input.h
 	cc68x -g -c input.c
+	
+vbl.o: vbl.s vbl.h
+	gen -L2 vbl.s
+
+isr.o: isr.c isr.h
+	cc68x -g -c isr.c
 
 tst_snd: tst_snd.o music.o psg.o effects.o
 	cc68x -g tst_snd.o music.o psg.o effects.o -o tst_snd
@@ -54,17 +60,17 @@ tst_snd: tst_snd.o music.o psg.o effects.o
 tst_snd.o: tst_snd.c music.h psg.h effects.h
 	cc68x -g -c tst_snd.c
 
-tst_ren: tst_ren.o renderer.o font.o model.o events.o bitmaps.o splash.o video.o random.o
-	cc68x -g tst_ren.o renderer.o raster.o font.o model.o events.o bitmaps.o splash.o video.o random.o -o tst_ren
+tst_ren: tst_ren.o renderer.o font.o model.o events.o bitmaps.o splash.o video.o random.o psg.o music.o effects.o
+	cc68x -g tst_ren.o renderer.o raster.o font.o model.o events.o bitmaps.o splash.o video.o random.o psg.o music.o effects.o -o tst_ren
 
 renderer.o: renderer.c renderer.h raster.h types.h model.h bitmaps.h events.h splash.h video.h random.h
 	cc68x -g -c renderer.c
 
-tst_ren.o: tst_ren.c renderer.h raster.h types.h model.h bitmaps.h events.h splash.h video.h random.h
+tst_ren.o: tst_ren.c renderer.h raster.h types.h model.h bitmaps.h events.h splash.h video.h random.h 
 	cc68x -g -c tst_ren.c
 
-showdown: showdown.o renderer.o font.o model.o events.o bitmaps.o splash.o video.o input.o random.o
-	cc68x -g showdown.o renderer.o raster.o font.o model.o events.o bitmaps.o splash.o video.o input.o random.o -o showdown
+showdown: showdown.o renderer.o font.o model.o events.o bitmaps.o splash.o video.o input.o random.o vbl.o isr.o psg.o music.o effects.o
+	cc68x -g showdown.o renderer.o raster.o font.o model.o events.o bitmaps.o splash.o video.o input.o random.o vbl.o isr.o psg.o music.o effects.o -o showdown
 
-showdown.o: showdown.c renderer.h raster.h types.h model.h bitmaps.h events.h splash.h video.h input.h random.h
+showdown.o: showdown.c renderer.h raster.h types.h model.h bitmaps.h events.h splash.h video.h input.h random.h psg.h music.h effects.h
 	cc68x -g -c showdown.c
